--- a/src/main/frontend/themes/default/styles.css
+++ b/src/main/frontend/themes/default/styles.css
@@ -93,7 +93,7 @@ body {
 
 /* 1. La zone de saisie (Le fond) */
 .glass-field::part(input-field) {
-    background-color: rgba(255, 255, 255, 0.3); /* Fond blanc transparent */
+    background-color: rgba(255, 255, 255, 0.4); /* Fond blanc transparent */
     border-radius: 12px;      /* Coins très arrondis */
     border: 1px solid rgba(255, 255, 255, 0.6); /* Bordure fine blanche */
     box-shadow: inset 0 2px 4px rgba(0,0,0,0.05); /* Petite ombre interne */
@@ -230,7 +230,8 @@ body {
     background-color: white;       /* Fond blanc opaque */
     box-shadow: 0 4px 10px rgba(0,0,0,0.05); /* Ombre légère en dessous */
     border-bottom: 1px solid rgba(0,0,0,0.05);
-    z-index: 10;                   /* S'assure qu'elle est au dessus */
+    z-index: 10;   
+    height: 70px;/* S'assure qu'elle est au dessus */
 }
 
 /* Style des onglets individuels */
@@ -294,12 +295,14 @@ body {
 }
 
 .glass-details {
-    background: rgba(255, 255, 255, 0.05); /* Fond très léger */
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.25); /* Fond très léger */
+    border: 2px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
-    margin-bottom: 10px; /* Espace entre les tiroirs */
+    margin-bottom: 20px; /* Espace entre les tiroirs */
     overflow: hidden; /* Coupe ce qui dépasse */
-    transition: all 0.3s ease;
+    transition: all 0.6s ease;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 /* Le Titre (Résumé) */
@@ -307,9 +310,9 @@ body {
     background: rgba(255, 255, 255, 0.1);
     color: white;
     font-weight: bold;
-    padding: 10px;
+    padding: 15px;
     cursor: pointer;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Segoe UI', serif;
 }
 
 .glass-details::part(summary):hover {
