--- a/src/main/frontend/themes/default/styles.css
+++ b/src/main/frontend/themes/default/styles.css
@@ -1,4 +1,18 @@
 /* Add your styles here */
+html {
+    /* 14px : Taille minimale (sur téléphone)
+       1vw + 0.5rem : La police grandit avec la largeur de l'écran
+       18px : Taille maximale (sur grand écran)
+    */
+    font-size: clamp(9px, 1vw + 0.5rem, 11px);
+    
+    /* On met à jour les variables Vaadin pour que les composants (Grid, TextField) suivent */
+    --lumo-font-size-m: 1rem;
+    --lumo-font-size-l: 1.25rem;
+    --lumo-font-size-s: 0.875rem;
+}
+
+
 :root {
     /* --- Couleurs du Fond (Ajustement Final : Magenta/Améthyste) --- */
     /* Ces couleurs sont plus claires que la version 'Royal Purple' mais conservent la profondeur. */
@@ -43,7 +57,7 @@ body {
     background: #f8f4fc;              /* fond mauve très clair */
     border: 1px solid #d3bce6;        /* bordure mauve pastel */
     border-radius: 16px;
-    padding: 30px;
+    padding: 15px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     font-family: 'Segoe UI', sans-serif;
     color: #5e3c76;                   /* texte mauve foncé */
@@ -53,7 +67,7 @@ body {
     /* 1. Transparence et Flou (L'effet "verre") */
     background: var(--glass-background);
     backdrop-filter: blur(10px); /* Applique un flou à l'arrière-plan du bouton */
-
+    width: 100%;
     
     /* 2. Forme et Bordure */
     border: 1px solid var(--glass-border-color);
@@ -62,7 +76,7 @@ body {
     
     /* 3. Texte et Ombre */
     color: var(--glass-text-color);
-    font-weight: bold;
+    font-weight: bold;  
     text-shadow: 0 0 5px var(--glass-shadow); /* Ombre très subtile sur le texte */
     box-shadow: 0 4px 6px var(--glass-shadow); /* Ombre douce sous le bouton */
     
@@ -231,7 +245,7 @@ body {
     box-shadow: 0 4px 10px rgba(0,0,0,0.05); /* Ombre légère en dessous */
     border-bottom: 1px solid rgba(0,0,0,0.05);
     z-index: 10;   
-    height: 70px;/* S'assure qu'elle est au dessus */
+    height: 50px;/* S'assure qu'elle est au dessus */
 }
 
 /* Style des onglets individuels */
@@ -321,6 +335,6 @@ body {
 
 /* Le Contenu intérieur */
 .glass-details::part(content) {
-    padding: 15px; /* Un peu d'espace autour des formulaires */
+    padding: 5px; /* Un peu d'espace autour des formulaires */
     background: rgba(0, 0, 0, 0.1); /* Légèrement plus sombre pour le contraste */
 }
